objects/Record_Count__c.object
<CustomObject>
    <label>Record Count</label>
    <nameField>
        <label>Record Count Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Record Counts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Both_Count__c</fullName>
        <label>Both Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student_Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Fee</label>
        <referenceTo>Student_Fee__c</referenceTo>
        <relationshipLabel>Record Counts</relationshipLabel>
        <relationshipName>Record_Counts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Choose_Color__c</fullName>
        <label>Choose Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Choose_Shape__c</fullName>
        <label>Choose Shape</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Circle</fullName>
                </value>
                <value>
                    <fullName>Triangle</fullName>
                </value>
                <value>
                    <fullName>Square</fullName>
                </value>
                <value>
                    <fullName>Rectangle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>